--- a/head/settings_custom.tex
+++ b/head/settings_custom.tex
@@ -62,7 +62,7 @@
 \newtheorem{example}{Example}
 
 %\newtheorem{my_proof}{\textit{\textbf{Proof}}}[]
-\newenvironment{my_proof}{\textbf{{Proof:}}}{\hfill$\square$}
+\newenvironment{my_proof}{}{\hfill$\square$}
 
 \newtheorem{remark}{Remark}
 
