--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -246,6 +246,22 @@
 	year={2018}
 }
 
+@article{karvonen2022error,
+	title={Error Bounds and the Asymptotic Setting in Kernel-Based Approximation},
+	author={Karvonen, Toni},
+	journal={Dolomites Research Notes on Approximation},
+	volume={15},
+	number={3},
+	year={2022}
+}
+
+@book{iske2018approximation,
+	title={Approximation theory and algorithms for data analysis},
+	author={Iske, Armin},
+	year={2018},
+	publisher={Springer}
+}
+
 
 
 
