--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -1,11 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
-
-
-%% Created for Matthias Geissbühler at 2011-03-21 13:46:46 +0100 
-
-
+%% Created for Matthias Geissbühler at 2011-03-21 13:46:46 +0100
 %% Saved with string encoding Unicode (UTF-8) 
+
+
+@article{maddalena2021deterministic,
+	title={Deterministic error bounds for kernel-based learning techniques under bounded noise},
+	author={Maddalena, Emilio Tanowe and Scharnhorst, Paul and Jones, Colin N},
+	journal={Automatica},
+	volume={134},
+	pages={109896},
+	year={2021},
+	publisher={Elsevier}
+}
+
+@inproceedings{maddalena2021kpc,
+	title={KPC: Learning-based model predictive control with deterministic guarantees},
+	author={Maddalena, Emilio T and Scharnhorst, Paul and Jiang, Yuning and Jones, Colin N},
+	booktitle={Learning for Dynamics and Control},
+	pages={1015--1026},
+	year={2021},
+	organization={PMLR}
+}
+
+@article{scharnhorst2023robust,
+	title={Robust Uncertainty Bounds in Reproducing Kernel Hilbert Spaces: A Convex Optimization Approach},
+	author={Scharnhorst, Paul and Maddalena, Emilio T and Jiang, Yuning and Jones, Colin N},
+	journal={IEEE Transactions on Information Theory},
+	year={2023}
+}
 
 
 
@@ -261,6 +284,67 @@
 	year={2018},
 	publisher={Springer}
 }
+
+@inproceedings{zhang2013divide,
+	title={Divide and conquer kernel ridge regression},
+	author={Zhang, Yuchen and Duchi, John and Wainwright, Martin},
+	booktitle={Conference on Learning Theory (COLT)},
+	pages={592--617},
+	year={2013},
+	organization={PMLR}
+}
+
+@article{burt2020convergence,
+	title={Convergence of Sparse Variational Inference in Gaussian Processes Regression},
+	author={Burt, David R and Rasmussen, Carl Edward and van der Wilk, Mark},
+	journal={Journal of Machine Learning Research},
+	volume={21},
+	pages={1--63},
+	year={2020}
+}
+
+@article{bauer2016understanding,
+	title={Understanding probabilistic sparse Gaussian process approximations},
+	author={Bauer, Matthias and van der Wilk, Mark and Rasmussen, Carl Edward},
+	journal={Advances in neural information processing systems},
+	volume={29},
+	year={2016}
+}
+
+
+@inproceedings{lederer2021gaussian,
+	title={Gaussian process-based real-time learning for safety critical applications},
+	author={Lederer, Armin and Conejo, Alejandro J Ord{\'o}{\~n}ez and Maier, Korbinian A and Xiao, Wenxin and Umlauft, Jonas and Hirche, Sandra},
+	booktitle={International Conference on Machine Learning},
+	pages={6055--6064},
+	year={2021},
+	organization={PMLR}
+}
+
+@book{boyd2011distributed,
+	title={Distributed optimization and statistical learning via the alternating direction method of multipliers},
+	author={Boyd, Stephen and Parikh, Neal and Chu, Eric},
+	year={2011},
+	publisher={Now Publishers Inc}
+}
+
+@book{bertsekas2009convex,
+	title={Convex optimization theory},
+	author={Bertsekas, Dimitri},
+	volume={1},
+	year={2009},
+	publisher={Athena Scientific}
+}
+
+@book{boyd2004convex,
+	title={Convex optimization},
+	author={Boyd, Stephen P and Vandenberghe, Lieven},
+	year={2004},
+	publisher={Cambridge university press}
+}
+
+
+
 
 
 
