--- a/head/settings_custom.tex
+++ b/head/settings_custom.tex
@@ -34,11 +34,16 @@
 \newtcbox{\mymathbox}[1][]{%
 	nobeforeafter, math upper, tcbox raise base,
 	enhanced, colframe=black!30!black,
-	colback=blue!20, boxrule=1pt,
+	colback=blue!10, boxrule=1pt,
 	#1}
 
 \usepackage{bm}
+\usepackage{rotating}
+\usepackage{lscape}
 
+\usepackage{placeins}
+
+\usepackage{bibentry}
 
 \usepackage{xcolor}
 \definecolor{salmon}{rgb}{0.99,0.66,0.52}
@@ -65,9 +70,6 @@
 \newenvironment{my_proof}{}{\hfill$\square$}
 
 \newtheorem{remark}{Remark}
-
-
-
 
 % COMMANDS
 
