--- a/head/settings_custom.tex
+++ b/head/settings_custom.tex
@@ -27,6 +27,8 @@
 % \relpenalty=9999
 % \binoppenalty=9999
 
+\usepackage{multirow,booktabs}
+
 %\usepackage{empheq}
 \usepackage{amsmath}
 \usepackage{empheq}
@@ -50,6 +52,12 @@
 \definecolor{purple}{rgb}{0.647,0.537,0.757}
 \newcommand{\mycomment}[1]{{\color{purple}#1}}
 \newcommand{\red}[1]{{\color{red}#1}}
+
+\definecolor{coolRed}{HTML}{FF6961}
+\definecolor{kindagray}{HTML}{BCBCBC}
+\definecolor{bordeaux}{HTML}{D60000}
+\definecolor{ripeOrange}{HTML}{ED6F38}
+\definecolor{azzurro}{HTML}{0072BD}
 
 
 % ENVIRONMENTS
