--- a/head/titlepage.tex
+++ b/head/titlepage.tex
@@ -6,7 +6,7 @@
 
 
 \null\vspace{2cm}
-{\huge KERNELIZED LEARNING METHODS \\[12pt] IN AUTOMATIC CONTROL} \\[24pt]  %\\[12pt] SECOND LINE OF TITLE} \\[24pt] 
+{\huge Machine Learning Methods for Robust Uncertainty Quantification and \\[12pt] Controller Approximation} \\[24pt]  %\\[12pt] SECOND LINE OF TITLE} \\[24pt] 
 \textcolor{gray}{\small{THIS IS A TEMPORARY TITLE PAGE \\ It will be replaced for the final print by a version \\ provided by the registrar's office.}}
     
 \vfill
@@ -25,16 +25,16 @@
 	École polytechnique fédérale de Lausanne\\[6pt]
 	pour l'obtention du grade de Docteur ès Sciences\\
 	par\\ [4pt]
-	\null \hspace{3em} Paolino Paperino\\[9pt]
+	\null \hspace{3em} Emilio Maddalena\\[9pt]
 %
 \small
 acceptée sur proposition du jury:\\[4pt]
 %
-    Prof Name Surname, président du jury\\
-    Prof Name Surname, directeur de thèse\\
-    Prof Name Surname, rapporteur\\
-    Prof Name Surname, rapporteur\\
-    Prof Name Surname, rapporteur\\[12pt]
+    Prof Giancarlo Ferrari-Trecate, président du jury\\
+    Prof Colin Neil Jones, directeur de thèse\\
+    Prof Sandra Hirche, rapporteur\\
+    Prof Lorenzo Fagiano, rapporteur\\
+    Prof Roy Smith, rapporteur\\[12pt]
 %
 Lausanne, EPFL, \the\year}
 \end{tabular}
