--- a/tail/appendix.tex
+++ b/tail/appendix.tex
@@ -1,6 +1,6 @@
 \appendix
 
-\chapter{Elements of analysis and algebra}
+\chapter{Elements of analysis and geometry}
 \label{app.elements_analysis_algebra}
 
 For a comprehensive presentation of the concepts, the reader os referred to \cite{searcoid2002elements,pugh2002real}. 
@@ -178,6 +178,17 @@ The concept of a Hamel basis is aligned with the more specific concept of a ``ba
 	\end{equation}
 	where $d = c - B^\top A^{-1} B$.
 \end{proposition}
+
+\begin{definition}
+	\textbf{(Polyhedron)}
+	A polyhedron $P \subseteq \mathbb{R}^n$ is a set $P = \{x \in \mathbb{R}^n : p_i(x) \leq 0, i=1,\dots,n_P\}$ with $n_P < \infty$ and $p_i(x)$ being are affine functions.
+\end{definition}
+
+\begin{definition}
+	\textbf{(Polytope)}
+	A polytope $P \subset \mathbb{R}^n$ is a bounded polyhedron.
+\end{definition}
+
 
 
 \mycomment{Perhaps explain the difference between SUP and MAX, INF and MIN. }
