--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -321,6 +321,15 @@
 	organization={PMLR}
 }
 
+@inproceedings{koller2018learning,
+	title={Learning-based model predictive control for safe exploration},
+	author={Koller, Torsten and Berkenkamp, Felix and Turchetta, Matteo and Krause, Andreas},
+	booktitle={IEEE Conference on Decision and Control (CDC)},
+	pages={6059--6066},
+	year={2018},
+	organization={IEEE}
+}
+
 @book{boyd2011distributed,
 	title={Distributed optimization and statistical learning via the alternating direction method of multipliers},
 	author={Boyd, Stephen and Parikh, Neal and Chu, Eric},
@@ -343,7 +352,16 @@
 	publisher={Cambridge university press}
 }
 
-
+@article{chachuat2009adaptation,
+	title={Adaptation strategies for real-time optimization},
+	author={Chachuat, Beno{\^\i}t and Srinivasan, Balasubramaniam and Bonvin, Dominique},
+	journal={Computers \& Chemical Engineering},
+	volume={33},
+	number={10},
+	pages={1557--1567},
+	year={2009},
+	publisher={Elsevier}
+}
 
 
 
